--- a/mod00-01/index.html
+++ b/mod00-01/index.html
@@ -29,7 +29,7 @@
 
 		<h2>Full Stack Web Developer</h2>
 
-		<p class="bio">>Kevin Jordan Payas is a Full Stack Web Developer, a graduate of Tuitt Incorporated and formerly work at a BPO Company as an analyst for almost 2 years. Coding and creating websites through different programming languages is my passion.</p>
+		<p class="bio">Kevin Jordan Payas is a Full Stack Web Developer, a graduate of Tuitt Incorporated and formerly work at a BPO Company as an analyst for almost 2 years. Coding and creating websites through different programming languages is my passion.</p>
 			
 	</div>
 
