Activity Simple Form

--- a/mod02-02/index.html
+++ b/mod02-02/index.html
@@ -4,6 +4,10 @@
 
 	<meta charset="utf-8">
 
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+
+	<meta http-equiv="x-ua-compatible" content="ie=edge">
+
 	<title>Activity | Forms</title>
 
 	<style type="text/css">
@@ -25,9 +29,9 @@
 		<fieldset>
 			<legend>Your Details:</legend>
 			<label>Name: </label>
-			<input type="text" name="name" required><br>
+			<input type="text" name="name" required size="25"><br>
 			<label>Email: </label>
-			<input type="email" name="emailAdd" required>
+			<input type="email" name="emailAdd" required size="25">
 		</fieldset>
 
 		<fieldset>
