--- a/mod02-13/index.html
+++ b/mod02-13/index.html
@@ -11,31 +11,66 @@
 
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
+	<link href="https://fonts.googleapis.com/css?family=Princess+Sofia" rel="stylesheet">
+
 </head>
 <body>
 
 	<div class="wrapper clear">
+
 		<div class="navigation">
 
-			<div class="logo"></div>
+			<div class="logo">
+		
+			</div>
+
 			<nav>
 				<ul>
-					<li><a href="#">Home</a></li>
-					<li><a href="#">About</a></li>
-					<li><a href="#">Services</a></li>
-					<li><a href="#">Projects</a></li>
-					<li><a href="#">Gallery</a></li>
+					<a href="#home"><li>Home</li></a>
+					<a href="#about"><li>About</li></a>
+					<a href="#services"><li>Services</li></a>
+					<a href="#projects"><li>Projects</li></a>
+					<a href="#gallery"><li>Gallery</li></a>
 				</ul>
 			</nav>
-		</div>
+		</div><!-- /.navigation -->
 
 		<main class="content">
 
-			<div class="home">Home</div>
-			<div class="about">About</div>
-			<div class="services">Services</div>
-			<div class="projects">Projects</div>
-			<div class="gallery">Gallery</div>
+			<div class="home" id="home">
+				<div class="homeLogo">
+					<h2>Welcome to Vigan</h2>
+				</div>
+			</div>
+			<div class="about" id="about">
+				<div class="aboutContainer">
+					<h2>About</h2>
+					<div class="cont">
+						<div class="aboutLogo"></div>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					</div>
+				</div>
+			</div>
+			<div class="services" id="services">
+				<div class="aboutContainer">
+					<h2>Services</h2>
+				</div>
+			</div>
+			<div class="projects" id="projects">
+				<div class="aboutContainer">
+					<h2>Projects</h2>
+				</div>
+			</div>
+			<div class="gallery" id="gallery">
+				<div class="aboutContainer">
+					<h2>Gallery</h2>
+				</div>
+			</div>
 
 		</main>
 	</div>
