Update on Capstone 1

--- a/capstone1/index.html
+++ b/capstone1/index.html
@@ -33,8 +33,8 @@
 				<h1>Test</h1>
 				<nav>
 					<ul>
-						<li><a href="">Home</li></a>
-						<li><a href="">List</li></a>
+						<li><a href="index.html">Home</li></a>
+						<li><a href="festivalslist.html">List</li></a>
 						<li><a href="">About</li></a>
 					</ul>
 				</nav>
@@ -44,6 +44,12 @@
 			</div>
 		</div>
 	</div>
+
+	<nav class="mobileNav">
+		<div class="toggle">
+			<i class="fa fa-bars" aria-hidden="true"></i>
+		</div>
+	</nav>
 	<nav class="navbar navbar-default">
 		<div class="container-fluid">
 			<!-- Brand and toggle get grouped for better mobile display -->
@@ -128,8 +134,32 @@
 			</div>
 		</section> <!-- Content -->
 
-		<section></section>
+		<section>
+			
+
+		</section>
+
+
+
 	</main> <!-- Wrapper -->
+	<footer class="footer" id="footer">
+		<div class="iconFooter" id="iconFooter">
+			<i class="fa fa-info-circle" aria-hidden="true"></i>
+		</div>
+		<div class="myProfile">
+			<h3>Kevin Jordan Payas</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua.</p>
+		</div>
+		<div class="contactMe">
+			<h3>Follow Me</h3>
+			<i class="fa fa-facebook" aria-hidden="true"></i>
+			<i class="fa fa-instagram" aria-hidden="true"></i>
+			<i class="fa fa-google" aria-hidden="true"></i>
+
+		</div>
+		
+	</footer>
 
 	<script src="https://use.fontawesome.com/46e425f466.js"></script>
 	<script type="text/javascript" src="js/script.js"></script>
